Add game of life slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -75,6 +75,21 @@
 					* Applications in Research
 					</script>
 				</section>
+
+				<section data-markdown>
+					<script type="text/template">
+					## Conway&#39;s Game of Life
+
+					![Gosper&#39;s glider gun](images/Gospers_glider_gun.gif)
+
+					* Cellular automation
+					* Deterministic "zero player game"
+					* Created in 1970 by John Conway
+
+					<small>http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life#/media/File:Gospers_glider_gun.gif</small>
+					<small>http://yournameinlife.com</small>
+					</script>
+				</section>
 			</div>
 
 		</div>
