Change presentation details
Add authors
Add description
Add title

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>reveal.js - The HTML Presentation Framework</title>
+	<title>COMP3330 HiPhi Presentation - AI In Video Games</title>
 
-	<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-	<meta name="author" content="Hakim El Hattab">
+	<meta name="description" content="COMP3330 2015 HiPhi Presentation">
+	<meta name="author" content="Beau Gibson, Tyler Haigh, Simon Hartcher, Robert Logan">
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
