Added Fragments to slide
Looks better than dumping a full page all at once

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -54,15 +54,15 @@
 					## Introduction
 
 					* "Game AI" encompasses
-						* Design Practices
-						* Path-Finding Algorithms
-						* Neural Networks
-						* Models of Interaction
-						* State Machines
-						* Decision Trees
+						* Design Practices<!-- .element: class="fragment" data-fragment-index="1" -->
+						* Path-Finding Algorithms<!-- .element: class="fragment" data-fragment-index="2" -->
+						* Neural Networks<!-- .element: class="fragment" data-fragment-index="3" -->
+						* Models of Interaction<!-- .element: class="fragment" data-fragment-index="4" -->
+						* State Machines<!-- .element: class="fragment" data-fragment-index="5" -->
+						* Decision Trees<!-- .element: class="fragment" data-fragment-index="6" -->
 					* "It aims to establish the belief in a living entity within the
-						computer that can act independently of the player"
-						Mateas, 2003
+						computer that can act independently of the player"<!-- .element: class="fragment" data-fragment-index="7" -->
+						Mateas, 2003<!-- .element: class="fragment" data-fragment-index="7" -->
 					</script>
 				</section>
 
