Replace single quote with html code

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -133,7 +133,7 @@
 				
 				<section data-markdown>
 					<script type="text/template">
-					## Application's In Research ##
+					## Application&#39;s In Research ##
 
 					The primary goal of Game AI is to entertain. As such, developers tend to avoid
 					using true "academic" AI, opting for short-cuts and efficiency, whilst maintaining some
