Nicely format references on GoL slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -126,8 +126,10 @@
 					* Deterministic "zero player game"
 					* Created in 1970 by John Conway
 
-					<small>http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life#/media/File:Gospers_glider_gun.gif</small>
-					<small>http://yournameinlife.com</small>
+					<small>
+						([LucasVB, 2005](http://en.wikipedia.org/wiki/Conway%27s_Game_of_Life#/media/File:Gospers_glider_gun.gif))<br>
+						([DuVall, 2014](http://yournameinlife.com))
+					</small>
 					</script>
 				</section>
 				
