Add caption to gospers glider gun

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -120,7 +120,12 @@
 					<script type="text/template">
 					## Conway&#39;s Game of Life
 
-					![Gosper&#39;s glider gun](images/Gospers_glider_gun.gif)
+					<figure>
+						<img src="images/Gospers_glider_gun.gif" alt="Gosper's Glider Gun">
+						<figcaption>
+							<small>Gosper&#39;s glider gun (the father of hacking)</small>
+						</figcaption>
+					</figure>
 
 					* Cellular automation
 					* Deterministic "zero player game"
