Fix spelling and remove netbeans

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -273,7 +273,7 @@
                     <script type="text/template">
 					## Spiritual Successors
 
-					Following Westwood&#39;s success, a huge number of RTS games followed which utilsed similat A.I. methodologies.  
+					Following Westwood&#39;s success, a huge number of RTS games followed which utilsed similar AI methodologies.  
 					
 					* Warcraft<!-- .element: class="fragment" data-fragment-index="1" -->
 					* Command & Conquer<!-- .element: class="fragment" data-fragment-index="2" -->
