Add questions slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -417,7 +417,12 @@
 
 					</script>
 				</section>
-				
+
+        <section>
+          <h2>Questions?</h2>
+          <img src="images/whoisittotheend.gif" alt="">
+        </section>
+
 			</div>
 
 		</div>
